--- a/src/app/shared/authentication/signin/signin.component.html
+++ b/src/app/shared/authentication/signin/signin.component.html
@@ -1,13 +1,15 @@
 <section class="login" *ngIf="showSignin">
-    <img class="logo" src="/assets/logo.png" alt="logo">
+    <!--    <img class="logo" src="/assets/logo.png" alt="logo">-->
+    <p class="logo">LOGO</p>
 
+    <p class="sign-in">Sign <span>In</span></p>
     <div class="form">
         <form [formGroup]="registerForm" (ngSubmit)="onLogin()">
             <div class="row">
-                <mat-form-field appearance="outline">
-                    <mat-label>Email</mat-label>
-                    <input type="email" formControlName="email" matInput placeholder="Email">
-                </mat-form-field>
+                <label>
+                    <input type="email" formControlName="email" placeholder="Email">
+                </label>
+
                 <div class="errors" *ngIf="submitted && f.email.errors">
                     <p class="error-message" *ngIf="f.email.errors.required">Email is required</p>
                     <p class="error-message" *ngIf="f.email.errors.email">Email must be a valid email
@@ -17,13 +19,10 @@
             </div>
 
             <div class="row">
+                <label>
+                    <input formControlName="password" [type]="fieldTextType ? 'text' : 'password'" placeholder="Password">
+                </label>
 
-                <mat-form-field appearance="outline">
-                    <mat-label>Password</mat-label>
-                    <input formControlName="password" [type]="fieldTextType ? 'text' : 'password'" matInput
-                           placeholder="Password">
-                    <mat-icon (click)="toggleFieldTextType()" matSuffix>remove_red_eye</mat-icon>
-                </mat-form-field>
                 <div class="errors" *ngIf="submitted && f.password.errors">
                     <p class="error-message" *ngIf="f.password.errors.required">Password is required</p>
                     <p class="error-message" *ngIf="f.password.errors.minlength">Password must be at least 6
@@ -32,14 +31,15 @@
             </div>
         </form>
         <button class="start" (click)="onLogin()">START SESSION</button>
-        <!--        <p class="forgot" (click)="forgotPassword =true;">Forgot your password?</p>-->
+        <p class="forgot" (click)="forgotPassword =true;">Forgot your password?</p>
     </div>
     <div class="create-account-container">
-        <a (click)="goToSignUp()">Create an account</a>
+        <a (click)="goToSignUp()">I don’t have an account. Create one!</a>
     </div>
-
 </section>
+
 <app-signup-wizard (closWizard)="closeWizard()" *ngIf="showWizard"></app-signup-wizard>
+
 <section *ngIf="forgotPassword" class="login">
     <div (click)="forgotPassword = !forgotPassword" class="x"> X</div>
     <img class="logo" src="/assets/logo.png" alt="logo">
