--- a/src/app/shared/authentication/signup/signup.component.scss
+++ b/src/app/shared/authentication/signup/signup.component.scss
@@ -11,8 +11,37 @@ section.sign-up {
   flex-direction: column;
   justify-content: space-between;
   box-sizing: border-box;
-  padding: 0 16px;
+  padding: 0 25px;
   overflow-y: auto;
+
+  background: radial-gradient(71.47% 224.04% at 19.09% 13.6%, #404658 0%, #161820 100%);
+
+  img.logo {
+    width: 98px;
+    height: 45px;
+    margin: 28px auto 52px auto;
+  }
+
+  p.logo {
+    width: 98px;
+    height: 45px;
+    margin: 28px auto 52px auto;
+    font-size: 38px;
+    color: white;
+  }
+
+  p.sign-up {
+    display: flex;
+    align-items: center;
+    font-size: 27px;
+    margin: 0 auto 125px auto;
+    color: white;
+
+    span {
+      color: #FCE651;
+      padding-left: 0.3em;
+    }
+  }
 
   form.signInForm {
     width: 100%;
@@ -29,47 +58,28 @@ section.sign-up {
       width: 100%;
 
       label {
-        position: relative;
-        box-sizing: border-box;
-        padding: 0.5em;
         width: 100%;
+
+        svg g {
+          fill: rgba(255, 255, 255, 0.6);
+        }
+
+        input {
+          width: 100%;
+          border-radius: 3.5px;
+          height: 54px;
+          background-color: transparent;
+          color: rgba(255, 255, 255, 0.6);
+          border: 1px solid rgba(255, 255, 255, 0.6);
+          box-sizing: border-box;
+          padding: 15px;
+          color: white;
+
+          &:focus {
+            background-color: transparent !important;
+          }
+        }
       }
-
-      p {
-        position: absolute;
-        margin: 0;
-        height: 14px;
-        font-size: 12px;
-        font-weight: normal;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: 1.17;
-        letter-spacing: 0.4px;
-        text-align: left;
-        color: #bfbfbf;
-
-        padding: 0 10px;
-        z-index: 1;
-        transition: all 0.3s;
-
-        transform: translateY(-50%);
-        top: 50%;
-        left: 20px;
-
-      }
-
-      input {
-        height: 56px;
-        border-radius: 4px;
-        opacity: 0.5;
-        border: solid 1px #000000;
-        width: 100%;
-        color: #000;
-        box-sizing: border-box;
-        padding: 0.5em;
-
-      }
-
       svg.eye {
         width: 24px;
         height: 24px;
@@ -77,14 +87,6 @@ section.sign-up {
         top: 50%;
         right: 20px;
         transform: translateY(-50%);
-      }
-
-      label.hasValue p,
-      label:focus-within p {
-        top: 0;
-        transform: translateY(0%);
-        left: 20px;
-        background-color: white;
       }
     }
 
@@ -113,25 +115,24 @@ section.sign-up {
     button.confirm {
       height: 56px;
       border-radius: 4px;
-      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
-      background-color: #ce564b;
+      background-color: #FCE651;
+      color: #000;
 
       font-size: 14px;
       line-height: 16px;
       letter-spacing: 1.25px;
-      color: white;
       margin-bottom: 0.5em;
     }
 
     button.cancel {
       height: 56px;
       border-radius: 4px;
-      border: solid 1px #ce564b;
-      background-color: #ffffff;
+      border: solid 1px #FCE651;
+      background-color: transparent;
       font-size: 14px;
       line-height: 16px;
       letter-spacing: 1.25px;
-      color: #ce564b;
+      color: #FCE651;
     }
   }
 
@@ -249,8 +250,8 @@ section.sign-up {
   display: flex;
   justify-content: center;
 
+
   .circle {
-    background: #f3f3f3;
     padding: 0.5em;
     width: 120px;
     height: 120px;
@@ -258,7 +259,22 @@ section.sign-up {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid #ce564b;
+    border: 2px dotted white;
+    background-color: rgba(255, 255, 255, 0.1);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    svg path {
+      fill: #282C36;
+    }
+
+    .add {
+      color: rgba(255, 255, 255, 0.6);
+      font-weight: 300;
+      padding-top: 4.5px;
+    }
   }
 
   img {
