--- a/src/app/shared/select-target-modal/select-target-component.html
+++ b/src/app/shared/select-target-modal/select-target-component.html
@@ -1,59 +1,64 @@
 <section class="target-selection">
+
+    <!--        <div class="choose-target">-->
+    <!--            <div class="goal-wrapper">-->
+    <!--                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18.01 18.01">-->
+    <!--                    <defs>-->
+    <!--                        <style>.cls-1 {-->
+    <!--                            fill: #fff;-->
+    <!--                        }</style>-->
+    <!--                    </defs>-->
+    <!--                    <title>goal</title>-->
+    <!--                    <path id="goal" class="cls-1"-->
+    <!--                          d="M16.68,4.3l.87-.87a.52.52,0,0,0-.33-.9L15.6,2.4,15.47.78A.54.54,0,0,0,14.9.29a.52.52,0,0,0-.33.16l-.88.87a9,9,0,1,0,3,3ZM14.59,2.93a.52.52,0,0,0,.48.48l.93.08L14.74,4.75l-1.37-.12-.12-1.37L14.51,2ZM10.79,9A1.8,1.8,0,1,1,9,7.21a1.77,1.77,0,0,1,.84.21L8.63,8.63a.52.52,0,0,0,.74.74l1.21-1.21A1.77,1.77,0,0,1,10.79,9ZM10.6,6.65a2.83,2.83,0,1,0,.75.74l1.5-1.5a4.93,4.93,0,1,1-.74-.75Zm4,8a7.94,7.94,0,0,1-11.46-11l.23-.24a8,8,0,0,1,9.55-1.29l-.6.6a.51.51,0,0,0-.15.36V3.1l.07.84a6,6,0,1,0,1.8,1.81l.84.07h.29l0,0h0l0,0h0s0,0,0,0l.6-.59a8,8,0,0,1-1.3,9.54Z"-->
+    <!--                          transform="translate(0 0)"/>-->
+    <!--                </svg>-->
+    <!--            </div>-->
+    <!--            <span> CHOOSE TARGET </span>-->
+    <!--        </div>-->
+
     <header>
-        <div>
-            <span>Select Target</span>
-        </div>
+        <p class="title">Select <span>Target</span></p>
+        <button class="connect" (click)="reScan()" *ngIf="isScanning">connect to target</button>
+
+        <p class="explanation-text" *ngIf="!isScanning">
+            If you don’t see your Target in the list, please go to Bluetooth settings and make sure your device is
+            paired
+        </p>
     </header>
-    <div class="scan-container">
-        <div class="choose-target">
-            <div class="goal-wrapper">
-                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18.01 18.01">
-                    <defs>
-                        <style>.cls-1 {
-                            fill: #fff;
-                        }</style>
-                    </defs>
-                    <title>goal</title>
-                    <path id="goal" class="cls-1"
-                          d="M16.68,4.3l.87-.87a.52.52,0,0,0-.33-.9L15.6,2.4,15.47.78A.54.54,0,0,0,14.9.29a.52.52,0,0,0-.33.16l-.88.87a9,9,0,1,0,3,3ZM14.59,2.93a.52.52,0,0,0,.48.48l.93.08L14.74,4.75l-1.37-.12-.12-1.37L14.51,2ZM10.79,9A1.8,1.8,0,1,1,9,7.21a1.77,1.77,0,0,1,.84.21L8.63,8.63a.52.52,0,0,0,.74.74l1.21-1.21A1.77,1.77,0,0,1,10.79,9ZM10.6,6.65a2.83,2.83,0,1,0,.75.74l1.5-1.5a4.93,4.93,0,1,1-.74-.75Zm4,8a7.94,7.94,0,0,1-11.46-11l.23-.24a8,8,0,0,1,9.55-1.29l-.6.6a.51.51,0,0,0-.15.36V3.1l.07.84a6,6,0,1,0,1.8,1.81l.84.07h.29l0,0h0l0,0h0s0,0,0,0l.6-.59a8,8,0,0,1-1.3,9.54Z"
-                          transform="translate(0 0)"/>
-                </svg>
-            </div>
-            <span> CHOOSE TARGET </span>
-        </div>
-        <button class="btn-connect" (click)="reScan()"> Scan</button>
+
+
+    <!--        <div *ngIf="personalTarget && !isFromWizard && this.isPersonalTargetAround">-->
+    <!--            <div class="personal-target-title"> Personal Target</div>-->
+    <!--            <div (click)="onTargetSelected(this.personalTarget); personalChosen = true;" class="target-name">-->
+    <!--                <span>  {{this.personalTarget.name}}</span>-->
+    <!--                <img *ngIf="personalChosen"-->
+    <!--                     src="assets/icons/Icon%20-%20Check%20Circle%20-%20Filled.svg">-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <hr>-->
+
+    <div class="ble-img" *ngIf="isScanning">
+        <img *ngIf="isScanning" class="scanAnimation" src="assets/icons/Group%20770.svg">
     </div>
-    <div class="content">
-        <div *ngIf="personalTarget && !isFromWizard && this.isPersonalTargetAround">
-            <div class="personal-target-title"> Personal Target</div>
-            <div (click)="onTargetSelected(this.personalTarget); personalChosen = true;" class="target-name">
-                <span>  {{this.personalTarget.name}}</span>
-                <img *ngIf="personalChosen"
-                     src="assets/icons/Icon%20-%20Check%20Circle%20-%20Filled.svg">
-            </div>
-        </div>
-        <hr>
 
-        <div class="ble-img" *ngIf="isScanning">
-            <img *ngIf="isScanning" class="scanAnimation" src="assets/icons/Group%20770.svg">
-        </div>
-        <div class="targets-list-container" *ngIf="myTargets.length > 0 ">
-            <div class="targets-list" *ngFor="let target of  myTargets; let i = index">
-                <div class="targets-count"> Traget #{{i}}</div>
-                <div (click)="onTargetSelected(target);" class="target-name">
-                    <span>  {{target.name}}</span>
-                    <img *ngIf="target.isSelected" src="assets/icons/Icon%20-%20Check%20Circle%20-%20Filled.svg">
-                </div>
-            </div>
-        </div>
+    <ul class="target-list" *ngIf="!isScanning">
+        <li *ngFor="let item of targets" (click)="setSelectedTarget(item)"
+            [ngClass]="{'selected': item.isSelected}">{{ item.name }}</li>
+    </ul>
+
+    <!--        <div class="targets-list-container" *ngIf="myTargets.length > 0 ">-->
+    <!--            <div class="targets-list" *ngFor="let target of  myTargets; let i = index">-->
+    <!--                <div class="targets-count"> Traget #{{i}}</div>-->
+    <!--                <div (click)="onTargetSelected(target);" class="target-name">-->
+    <!--                    <span>  {{target.name}}</span>-->
+    <!--                    <img *ngIf="target.isSelected" src="assets/icons/Icon%20-%20Check%20Circle%20-%20Filled.svg">-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--        </div>-->
 
 
-        <div class="buttons-container">
-            <button class="btn-connect" [disabled]="targetNotSelected"
-                    (click)="onGoToEditDrill()"> Continue
-            </button>
-        </div>
-    </div>
+    <button class="continue" [disabled]="!targetNotSelected" (click)="onGoToEditDrill()"> Continue</button>
 </section>
 
 
