--- a/src/app/shared/select-target-modal/select-target.component.scss
+++ b/src/app/shared/select-target-modal/select-target.component.scss
@@ -1,267 +1,369 @@
 @import "../../../assets/colors";
 
-section {
-  header {
-    height: 56px;
-    margin-top: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    div {
-      height: 24px;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      img {
-        position: absolute;
-        left: 24px;
-        height: 30px;
-
-      }
-
-      span {
-        width: 300px;
-        height: 24px;
-        font-family: Roboto;
-        font-size: 20px;
-        font-weight: 500;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: 1.2;
-        letter-spacing: 0.26px;
-        text-align: center;
-        color: rgba(0, 0, 0, 0.8);
-      }
-    }
-  }
-
-  .content {
-    .personal-target-title {
-      height: 14px;
-      font-family: Roboto, serif;
-      font-size: 12px;
-      font-weight: normal;
-      font-stretch: normal;
-      font-style: normal;
-      line-height: 1.17;
-      letter-spacing: 1.88px;
-      text-align: left;
-      color: rgba(0, 0, 0, 0.61);
-      width: 92%;
-      margin-left: 24px;
-      margin-right: 24px;
-      margin-top: 129px;
-    }
-
-    .personal-target-name {
-      height: 40px;
-      border-radius: 4px;
-      border: solid 1px #000000;
-      display: flex;
-      align-items: center;
-      padding-left: 5px;
-      width: 92%;
-      margin-left: 24px;
-      margin-right: 24px;
-      font-family: Roboto, serif;
-      font-size: 14px;
-      font-weight: normal;
-      font-stretch: normal;
-      font-style: normal;
-      line-height: 1.14;
-      letter-spacing: 0.24px;
-      text-align: left;
-      color: rgba(0, 0, 0, 0.87);
-    }
-
-    hr {
-      width: 100%;
-      height: 1px;
-      opacity: 0.05;
-      background-color: #000000;
-      margin-top: 24px;
-    }
-
-    .ble-img {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-      img {
-        width: 178px;
-        height: 178px;
-      }
-    }
-
-    .buttons-container {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      bottom: 0;
-      margin-bottom: 33px;
-      margin-left: 16px;
-      margin-right: 16px;
-      width: calc(100% - 34px);
-      align-items: center;
-      z-index: 9999;
-      .btn-connect {
-        width: 343px;
-        height: 56px;
-        border-radius: 4px;
-        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
-        background-color: #ce564b;
-        font-family: Roboto, serif;
-        font-size: 14px;
-        font-weight: 500;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: 1.14;
-        letter-spacing: 1.25px;
-        text-align: center;
-        color: #ffffff;
-      }
-
-      .btn-connect:disabled {
-        background-color: #ce564bb3;
-      }
-
-      .btn-setings {
-        width: 343px;
-        height: 56px;
-        border-radius: 4px;
-        border: solid 1px #ce564b;
-        background-color: #ffffff;
-        font-family: Roboto;
-        font-size: 14px;
-        font-weight: 500;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: 1.14;
-        letter-spacing: 1.25px;
-        text-align: center;
-        color: #ce564b;
-        margin-top: 10px;
-      }
-    }
-  }
-
-}
-
-
-.targets-list-container {
-  .targets-list {
-    .targets-count {
-      font-family: Roboto;
-      font-size: 12px;
-      font-weight: normal;
-      font-stretch: normal;
-      font-style: normal;
-      line-height: 1.17;
-      letter-spacing: 1.88px;
-      text-align: left;
-      color: rgba(0, 0, 0, 0.61);
-      padding-bottom: 8px;
-      padding-bottom: 8px;
-      margin-left: 24px;
-    }
-
-    .target-name {
-      margin-right: 24px;
-      margin-left: 24px;
-      height: 40px;
-      border-radius: 4px;
-      border: solid 1px #000000;
-      font-family: Roboto;
-      font-size: 14px;
-      font-weight: normal;
-      font-stretch: normal;
-      font-style: normal;
-      line-height: 1.14;
-      letter-spacing: 0.24px;
-      text-align: left;
-      color: rgba(0, 0, 0, 0.87);
-      display: flex;
-      align-items: center;
-      padding-left: 12px;
-      justify-content: space-between;
-
-      span {
-        font-family: Roboto;
-        font-size: 14px;
-        font-weight: normal;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: 1.14;
-        letter-spacing: 0.24px;
-        text-align: left;
-        color: rgba(0, 0, 0, 0.87);
-      }
-
-      img {
-        height: 20px;
-        width: 20px;
-        margin-right: 17px;
-      }
-    }
-  }
-}
-
-.scan-container {
-  z-index: 9999;
+section.target-selection {
+  width: 100%;
+  height: 100%;
   display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 63px 16px 40px 16px;
+  overflow-y: auto;
+  background: radial-gradient(71.47% 224.04% at 19.09% 13.6%, #404658 0%, #161820 100%);
   align-items: center;
+  justify-content: space-between;
 
-  .choose-target {
+
+  header {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    width: 75%;
+    width: 100%;
 
-    .goal-wrapper {
-      margin-left: 27px;
-      width: 24px;
-      height: 24px;
+    p.title {
       display: flex;
-      justify-content: center;
       align-items: center;
-      border-radius: 5px;
-      background-color: #363636;
+      font-size: 27px;
+      color: white;
+      margin: 0;
+      padding-bottom: 27px;
 
-      svg {
-        width: 18px;
-        height: 18px;
+      span {
+        color: #FCE651;
+        padding-left: 0.3em;
       }
     }
+    button.connect {
+      border: 1px solid #FCE651;
+      box-sizing: border-box;
+      border-radius: 3px;
+      background-color: transparent;
+      color: #FCE651;
+      height: 50px;
+      width: 100%;
 
-    span {
-      margin-left: 18px;
+      font-size: 16px;
+      line-height: 19px;
+      text-align: center;
+      text-transform: uppercase
+    }
+
+    p.explanation-text {
+      font-weight: 300;
+      font-size: 18px;
+      line-height: 21px;
+      text-align: center;
+      color: #FFFFFF;
+      margin: 0;
+      word-break: break-word;
+      width: 343px;
     }
   }
 
-  button {
-    width: 128px;
-    height: 40px;
-    border-radius: 4px;
-    border: solid 1px #ce564b;
-    background-color: white;
-    font-size: 14px;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.14;
-    letter-spacing: 1.25px;
-    text-align: center;
-    color: #ce564b;
-    margin-right: 24px;
-    z-index: 9999;
+
+  ul.target-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    width: 100%;
+
+    li {
+      height: 45px;
+      background: rgba(255, 255, 255, 0.27);
+      border-radius: 6px;
+      width: 100%;
+      margin-bottom: 10px;
+
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 24px;
+      letter-spacing: 0.15px;
+      color: rgba(255, 255, 255, 0.87);
+
+      box-sizing: border-box;
+      padding: 11px 23px;
+      transition: all 0.3s;
+
+      &.selected {
+        background: #FFFFFF;
+        color: black;
+      }
+    }
   }
+
+  button.continue {
+    box-sizing: border-box;
+    border-radius: 3px;
+    background-color: #FCE651;
+    color: black;
+    height: 50px;
+    width: 100%;
+
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    text-transform: uppercase
+  }
+
+  //header {
+  //  display: flex;
+  //
+  //  div {
+  //    height: 24px;
+  //    width: 100%;
+  //    display: flex;
+  //    justify-content: center;
+  //    align-items: center;
+  //
+  //    img {
+  //      position: absolute;
+  //      left: 24px;
+  //      height: 30px;
+  //
+  //    }
+  //
+  //    span {
+  //      width: 300px;
+  //      height: 24px;
+  //      font-family: Roboto;
+  //      font-size: 20px;
+  //      font-weight: 500;
+  //      font-stretch: normal;
+  //      font-style: normal;
+  //      line-height: 1.2;
+  //      letter-spacing: 0.26px;
+  //      text-align: center;
+  //      color: rgba(0, 0, 0, 0.8);
+  //    }
+  //  }
+  //}
+
+
+  //.content {
+  //  .personal-target-title {
+  //    height: 14px;
+  //    font-family: Roboto, serif;
+  //    font-size: 12px;
+  //    font-weight: normal;
+  //    font-stretch: normal;
+  //    font-style: normal;
+  //    line-height: 1.17;
+  //    letter-spacing: 1.88px;
+  //    text-align: left;
+  //    color: rgba(0, 0, 0, 0.61);
+  //    width: 92%;
+  //    margin-left: 24px;
+  //    margin-right: 24px;
+  //    margin-top: 129px;
+  //  }
+  //
+  //  .personal-target-name {
+  //    height: 40px;
+  //    border-radius: 4px;
+  //    border: solid 1px #000000;
+  //    display: flex;
+  //    align-items: center;
+  //    padding-left: 5px;
+  //    width: 92%;
+  //    margin-left: 24px;
+  //    margin-right: 24px;
+  //    font-family: Roboto, serif;
+  //    font-size: 14px;
+  //    font-weight: normal;
+  //    font-stretch: normal;
+  //    font-style: normal;
+  //    line-height: 1.14;
+  //    letter-spacing: 0.24px;
+  //    text-align: left;
+  //    color: rgba(0, 0, 0, 0.87);
+  //  }
+  //
+  //  hr {
+  //    width: 100%;
+  //    height: 1px;
+  //    opacity: 0.05;
+  //    background-color: #000000;
+  //    margin-top: 24px;
+  //  }
+  //
+  //  .ble-img {
+  //    display: flex;
+  //    justify-content: center;
+  //    align-items: center;
+  //    position: absolute;
+  //    top: 0;
+  //    width: 100%;
+  //    height: 100%;
+  //    z-index: 1;
+  //
+  //    img {
+  //      width: 178px;
+  //      height: 178px;
+  //    }
+  //  }
+  //
+  //  .buttons-container {
+  //    display: flex;
+  //    flex-direction: column;
+  //    position: absolute;
+  //    bottom: 0;
+  //    margin-bottom: 33px;
+  //    margin-left: 16px;
+  //    margin-right: 16px;
+  //    width: calc(100% - 34px);
+  //    align-items: center;
+  //    z-index: 9999;
+  //
+  //    .btn-connect {
+  //      width: 343px;
+  //      height: 56px;
+  //      border-radius: 4px;
+  //      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+  //      background-color: #ce564b;
+  //      font-family: Roboto, serif;
+  //      font-size: 14px;
+  //      font-weight: 500;
+  //      font-stretch: normal;
+  //      font-style: normal;
+  //      line-height: 1.14;
+  //      letter-spacing: 1.25px;
+  //      text-align: center;
+  //      color: #ffffff;
+  //    }
+  //
+  //    .btn-connect:disabled {
+  //      background-color: #ce564bb3;
+  //    }
+  //
+  //    .btn-setings {
+  //      width: 343px;
+  //      height: 56px;
+  //      border-radius: 4px;
+  //      border: solid 1px #ce564b;
+  //      background-color: #ffffff;
+  //      font-family: Roboto;
+  //      font-size: 14px;
+  //      font-weight: 500;
+  //      font-stretch: normal;
+  //      font-style: normal;
+  //      line-height: 1.14;
+  //      letter-spacing: 1.25px;
+  //      text-align: center;
+  //      color: #ce564b;
+  //      margin-top: 10px;
+  //    }
+  //  }
+  //}
+
 }
+
+//
+//.targets-list-container {
+//  .targets-list {
+//    .targets-count {
+//      font-family: Roboto;
+//      font-size: 12px;
+//      font-weight: normal;
+//      font-stretch: normal;
+//      font-style: normal;
+//      line-height: 1.17;
+//      letter-spacing: 1.88px;
+//      text-align: left;
+//      color: rgba(0, 0, 0, 0.61);
+//      padding-bottom: 8px;
+//      padding-bottom: 8px;
+//      margin-left: 24px;
+//    }
+//
+//    .target-name {
+//      margin-right: 24px;
+//      margin-left: 24px;
+//      height: 40px;
+//      border-radius: 4px;
+//      border: solid 1px #000000;
+//      font-family: Roboto;
+//      font-size: 14px;
+//      font-weight: normal;
+//      font-stretch: normal;
+//      font-style: normal;
+//      line-height: 1.14;
+//      letter-spacing: 0.24px;
+//      text-align: left;
+//      color: rgba(0, 0, 0, 0.87);
+//      display: flex;
+//      align-items: center;
+//      padding-left: 12px;
+//      justify-content: space-between;
+//
+//      span {
+//        font-family: Roboto;
+//        font-size: 14px;
+//        font-weight: normal;
+//        font-stretch: normal;
+//        font-style: normal;
+//        line-height: 1.14;
+//        letter-spacing: 0.24px;
+//        text-align: left;
+//        color: rgba(0, 0, 0, 0.87);
+//      }
+//
+//      img {
+//        height: 20px;
+//        width: 20px;
+//        margin-right: 17px;
+//      }
+//    }
+//  }
+//}
+//
+//.scan-container {
+//  z-index: 9999;
+//  display: flex;
+//  align-items: center;
+//
+//  .choose-target {
+//    display: flex;
+//    align-items: center;
+//    width: 75%;
+//
+//    .goal-wrapper {
+//      margin-left: 27px;
+//      width: 24px;
+//      height: 24px;
+//      display: flex;
+//      justify-content: center;
+//      align-items: center;
+//      border-radius: 5px;
+//      background-color: #363636;
+//
+//      svg {
+//        width: 18px;
+//        height: 18px;
+//      }
+//    }
+//
+//    span {
+//      margin-left: 18px;
+//    }
+//  }
+//
+//  button {
+//    width: 128px;
+//    height: 40px;
+//    border-radius: 4px;
+//    border: solid 1px #ce564b;
+//    background-color: white;
+//    font-size: 14px;
+//    font-weight: 500;
+//    font-stretch: normal;
+//    font-style: normal;
+//    line-height: 1.14;
+//    letter-spacing: 1.25px;
+//    text-align: center;
+//    color: #ce564b;
+//    margin-right: 24px;
+//    z-index: 9999;
+//  }
+//}
 
 .scanAnimation {
   animation: pulse-red 2s infinite;
@@ -271,89 +373,90 @@ section {
 @keyframes pulse-red {
   0% {
     transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
+    box-shadow: 0 0 0 0 rgba(84, 184, 222, 0.7);
     border-radius: 100%;
   }
 
   70% {
     transform: scale(1.5);
-    box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+    box-shadow: 0 0 0 10px rgba(84, 184, 222, 0);
     border-radius: 100%;
   }
 
   100% {
     transform: scale(1);
-    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
+    box-shadow: 0 0 0 0 rgba(84, 184, 222, 0);
     border-radius: 100%;
   }
 }
 
 
-.ble-img-abs{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 35px;
-  position: absolute;
-  top: 30%;
-  left:36%;
-  img {
-    width: 178px;
-    height: 178px;
-  }
-}
-
-.targets-count {
-  font-family: Roboto;
-  font-size: 12px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.17;
-  letter-spacing: 1.88px;
-  text-align: left;
-  color: rgba(0, 0, 0, 0.61);
-  padding-bottom: 8px;
-  padding-bottom: 8px;
-  margin-left: 24px;
-}
-
-.target-name {
-  margin-right: 24px;
-  margin-left: 24px;
-  height: 40px;
-  border-radius: 4px;
-  border: solid 1px #000000;
-  font-family: Roboto;
-  font-size: 14px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.14;
-  letter-spacing: 0.24px;
-  text-align: left;
-  color: rgba(0, 0, 0, 0.87);
-  display: flex;
-  align-items: center;
-  padding-left: 12px;
-  justify-content: space-between;
-
-  span {
-    font-family: Roboto;
-    font-size: 14px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.14;
-    letter-spacing: 0.24px;
-    text-align: left;
-    color: rgba(0, 0, 0, 0.87);
-  }
-
-  img {
-    height: 20px;
-    width: 20px;
-    margin-right: 17px;
-  }
-}
+//.ble-img-abs {
+//  display: flex;
+//  justify-content: center;
+//  align-items: center;
+//  margin-top: 35px;
+//  position: absolute;
+//  top: 30%;
+//  left: 36%;
+//
+//  img {
+//    width: 178px;
+//    height: 178px;
+//  }
+//}
+//
+//.targets-count {
+//  font-family: Roboto;
+//  font-size: 12px;
+//  font-weight: normal;
+//  font-stretch: normal;
+//  font-style: normal;
+//  line-height: 1.17;
+//  letter-spacing: 1.88px;
+//  text-align: left;
+//  color: rgba(0, 0, 0, 0.61);
+//  padding-bottom: 8px;
+//  padding-bottom: 8px;
+//  margin-left: 24px;
+//}
+//
+//.target-name {
+//  margin-right: 24px;
+//  margin-left: 24px;
+//  height: 40px;
+//  border-radius: 4px;
+//  border: solid 1px #000000;
+//  font-family: Roboto;
+//  font-size: 14px;
+//  font-weight: normal;
+//  font-stretch: normal;
+//  font-style: normal;
+//  line-height: 1.14;
+//  letter-spacing: 0.24px;
+//  text-align: left;
+//  color: rgba(0, 0, 0, 0.87);
+//  display: flex;
+//  align-items: center;
+//  padding-left: 12px;
+//  justify-content: space-between;
+//
+//  span {
+//    font-family: Roboto;
+//    font-size: 14px;
+//    font-weight: normal;
+//    font-stretch: normal;
+//    font-style: normal;
+//    line-height: 1.14;
+//    letter-spacing: 0.24px;
+//    text-align: left;
+//    color: rgba(0, 0, 0, 0.87);
+//  }
+//
+//  img {
+//    height: 20px;
+//    width: 20px;
+//    margin-right: 17px;
+//  }
+//}
 
