--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <div class="loader-wrapper" *ngIf="isLoding">
     <span> Please Wait</span>
     <img src="../assets/icons/loader.gif">
@@ -7,7 +8,7 @@
 
 
 
-<ion-app>
+<ion-app [class.ios]="isiOS">
     <ion-router-outlet></ion-router-outlet>
 </ion-app>
 
