--- a/src/global.scss
+++ b/src/global.scss
@@ -50,6 +50,7 @@ body, html {
   font-family: 'Roboto', sans-serif;
 }
 
+
 .mat-expansion-panel {
   background-color: white !important;
 }
@@ -220,4 +221,8 @@ mat-tab-header {
 
 .custom-dialog-container .mat-dialog-container {
  padding: 0px !important;
+}
+
+::ng-deep .cdk-overlay-pane{
+  max-width: 100vw !important;
 }
