--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -155,7 +155,9 @@
   .ios body {
     --ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
-
+      --safe-area-inset-top: env(safe-area-inset-top);
+      --safe-area-inset-bottom: env(safe-area-inset-bottom);
+      height: calc(100% + (var(--safe-area-inset-top) + var(--safe-area-inset-bottom)));
     --ion-text-color: #ffffff;
     --ion-text-color-rgb: 255,255,255;
 
