--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -44,7 +44,10 @@
 }
 
 //
-.ios{
-  margin-top: 30px;
-  height: 97%;
+@media screen and (orientation:portrait) {
+  .ios{
+    margin-top: 30px;
+    height: 97%;
+  }
 }
+
