--- a/src/app/shared/authentication/signin/signin.component.html
+++ b/src/app/shared/authentication/signin/signin.component.html
@@ -1,4 +1,4 @@
-<section class="login" *ngIf="showSignin">
+<section class="login" *ngIf="showSignin && !forgotPassword">
     <!--    <img class="logo" src="/assets/logo.png" alt="logo">-->
     <img class="logo" src="assets/logo.png">
     <p class="sign-in">Sign <span>In</span></p>
