--- a/src/app/shared/authentication/signup/signup.component.scss
+++ b/src/app/shared/authentication/signup/signup.component.scss
@@ -308,3 +308,14 @@ section.sign-up {
 }
 
 
+.custom-select {
+  border: 1px solid hsla(0, 0%, 100%, .6);
+  width: 100%;
+  border-radius: 3.5px;
+  height: 54px;
+  background-color: transparent;
+  color: hsla(0, 0%, 100%, .6);
+  box-sizing: border-box;
+  padding: 15px;
+  color: #fff;
+}
