--- a/src/app/shared/components/terms-and-condition/terms-and-condition.component.html
+++ b/src/app/shared/components/terms-and-condition/terms-and-condition.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="controls">
-    <button class="confirm">ACCEPT</button>
-    <button class="cancel">NOT NOW</button>
+    <button class="confirm" (click)="onCloseDialog(0)">ACCEPT</button>
+    <button class="cancel" (click)="onCloseDialog(1)">NOT NOW</button>
   </div>
 </section>
