--- a/src/app/shared/select-target-modal/select-target-component.html
+++ b/src/app/shared/select-target-modal/select-target-component.html
@@ -7,7 +7,7 @@
             <p>BACK</p>
         </div>
         <p class="title">Select <span>Target</span></p>
-        <button class="connect" (click)="reScan()" *ngIf="!isScanning && (!myTargets || myTargets.length ===0)">connect to
+        <button class="connect" (click)="reScan()" *ngIf="!isScanning">connect to
             target
         </button>
 
