--- a/src/app/shared/activity-log/activity-log.component.scss
+++ b/src/app/shared/activity-log/activity-log.component.scss
@@ -156,3 +156,10 @@ div.back-container {
 }
 
 
+.no-data {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
