--- a/src/app/shared/components/terms-and-condition/terms-and-condition.component.scss
+++ b/src/app/shared/components/terms-and-condition/terms-and-condition.component.scss
@@ -3,7 +3,7 @@
 }
 
 
-section.terms-and-conditions {
+section.payment {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -22,11 +22,11 @@ section.terms-and-conditions {
   }
 
   p.logo {
-    width: 98px;
+    width: 100%;
     height: 45px;
-    margin: 28px auto 52px auto;
-    font-size: 38px;
-    color: white;
+    margin: 28px auto 52px;
+    display: flex;
+    justify-content: center;
   }
 
 
