--- a/src/app/shared/select-target-modal/select-target.component.scss
+++ b/src/app/shared/select-target-modal/select-target.component.scss
@@ -65,6 +65,8 @@ section.target-selection {
     padding: 0;
     list-style: none;
     width: 100%;
+    height: 60vh;
+    overflow-y: auto;
 
     li {
       height: 45px;
