--- a/src/app/shared/subscription/subscription.page.html
+++ b/src/app/shared/subscription/subscription.page.html
@@ -9,6 +9,6 @@
 
 <ion-content color="light">
   <div class="content">
-    <app-payment></app-payment>
+    <app-payment (exit)="onClose()"></app-payment>
   </div>
 </ion-content>
