--- a/src/app/shared/authentication/signup/signup.component.html
+++ b/src/app/shared/authentication/signup/signup.component.html
@@ -102,24 +102,24 @@
                 <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
             </div>
         </div>
-        <div class="row">
-            <label>
-                <select
-                        class="custom-select mb-3"
-                        (change)="changeCity($event)"
-                        formControlName="cityName"
-                >
-                    <option value="">Choose City</option>
-                    <option *ngFor="let city of cities" [ngValue]="city">
-                        {{ city }}
-                    </option>
-                </select>
-            </label>
-            <div class="invalid-feedback" *ngIf="submitted && f.cityName?.errors">
-                <sup>*</sup>Please provide range name
-            </div>
+<!--        <div class="row">-->
+<!--            <label>-->
+<!--                <select-->
+<!--                        class="custom-select mb-3"-->
+<!--                        (change)="changeCity($event)"-->
+<!--                        formControlName="cityName"-->
+<!--                >-->
+<!--                    <option value="">Choose City</option>-->
+<!--                    <option *ngFor="let city of cities" [ngValue]="city">-->
+<!--                        {{ city }}-->
+<!--                    </option>-->
+<!--                </select>-->
+<!--            </label>-->
+<!--            <div class="invalid-feedback" *ngIf="submitted && f.cityName?.errors">-->
+<!--                <sup>*</sup>Please provide range name-->
+<!--            </div>-->
 
-        </div>
+<!--        </div>-->
         <div class="controls">
             <button type="submit" class="confirm" (click)="continueToThird()">START SESSION</button>
             <button class="cancel" (click)="onBackPressed()">BACK TO LOGIN</button>
@@ -127,5 +127,4 @@
     </form>
 
 </section>
-
 
