--- a/src/global.scss
+++ b/src/global.scss
@@ -57,6 +57,17 @@ body, html {
   height: calc(100% + (var(--safe-area-inset-top) + var(--safe-area-inset-bottom)));
 }
 
+.modal-fullscreen{
+  ::ng-deep .modal-wrapper{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100% !important;
+    height: 100% !important;
+  }
+}
+
 
 
 
