--- a/src/app/shared/activity-log/activity-log.component.scss
+++ b/src/app/shared/activity-log/activity-log.component.scss
@@ -1,7 +1,7 @@
 section {
   background: radial-gradient(71.47% 224.04% at 19.09% 13.6%, #404658 0%, #161820 100%);
   height: 100%;
-
+padding-top: 30px;
   .header {
     height: 50px;
     display: flex;
@@ -117,7 +117,7 @@ section {
 
 div.back-container {
   position: absolute;
-  top: 16px;
+  top: 50px;
   left: 16px;
 
   display: flex;
