--- a/src/app/shared/activity-log/activity-log.component.html
+++ b/src/app/shared/activity-log/activity-log.component.html
@@ -10,8 +10,7 @@
     </header>
     <div class="date-list-wrapper">
         <div class="dates-list">
-            <mat-accordion
-            >
+            <mat-accordion>
                 <mat-expansion-panel *ngFor="let train of cal">
                     <mat-expansion-panel-header>
                         <mat-panel-title>
