--- a/src/app/shared/drill/drill.component.scss
+++ b/src/app/shared/drill/drill.component.scss
@@ -213,7 +213,7 @@ section.drill-results {
 
       table {
         display: block;
-color:white;
+
         height: 200px;
         width: 100%;
         border-radius: 5px;
@@ -293,7 +293,7 @@ color:white;
               font-size: 12px;
               line-height: 14px;
               letter-spacing: 0.12px;
-              text-align: center;
+              text-align: left;
               box-sizing: border-box;
               padding: 0 0.5em;
 
@@ -380,7 +380,7 @@ color:white;
 }
 
 td {
-  text-align:  center;
+  text-align: left;
 }
 
 div.targetHoly {
@@ -1024,7 +1024,6 @@ div.welcome-message {
 .bg-pic {
   position: absolute;
   z-index: -1;
-  height: 100%;
 }
 
 .challenge-promo {
@@ -1053,6 +1052,3 @@ div.welcome-message {
 
 
 
-table {
-  color:white;
-}
