--- a/src/app/shared/subscription/subscription.page.html
+++ b/src/app/shared/subscription/subscription.page.html
@@ -1,7 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+    <ion-buttons color="light" slot="start" (click)="onClose()">
+      <!-- <ion-back-button ></ion-back-button> -->
+      <ion-icon name="chevron-back"></ion-icon>
     </ion-buttons>
     <ion-title>subscription</ion-title>
   </ion-toolbar>
